fix issue where bookshelf names are cut off in dropdown menu

--- a/app/assets/stylesheets/book_show.css.scss
+++ b/app/assets/stylesheets/book_show.css.scss
@@ -127,7 +127,7 @@
 #shelf_choice {
   display: block;
   float: left;
-  width: 128px;
+  width: 175px;
   margin-right: 15px;
 }
 
